src/tests/testfiles/variable-declarations/24.txt
testfiles/variable-declarations/24.c:5:16: error: variable 'd' undeclared
a = b + (b + d) + c;
             ^
